--- a/backend/package.json
+++ b/backend/package.json
@@ -9,43 +9,53 @@
     "test": "jest",
     "setup-db": "node scripts/setup-db.js",
     "sync-db": "node -e \"require('./config/database').syncDatabase()\"",
-    "reset-db": "node -e \"require('./config/database').syncDatabase(true)\""
+    "reset-db": "node -e \"require('./config/database').syncDatabase(true)\"",
+    "test-starknet": "node scripts/test-starknet-connection.js",
+    "test-vesu-config": "node scripts/test-vesu-config.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
+    "@starknet-io/types-js": "^0.10.0",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "decimal.js": "^10.4.3",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.9.0",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "mongoose": "^8.0.3",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2",
-    "redis": "^4.6.10",
-    "ethers": "^6.9.0",
-    "axios": "^1.6.2",
-    "ws": "^8.14.2",
-    "express-fileupload": "^1.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "redis": "^4.6.10",
+    "sequelize": "^6.35.2",
+    "starknet": "^6.24.1",
     "uuid": "^9.0.1",
-    "decimal.js": "^10.4.3",
-    "moment": "^2.30.1",
-    "lodash": "^4.17.21",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "fast-check": "^3.23.2",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "mongodb-memory-server": "^9.1.1"
+    "mongodb-memory-server": "^9.1.1",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
   },
-  "keywords": ["web3", "defi", "payments", "api"],
+  "keywords": [
+    "web3",
+    "defi",
+    "payments",
+    "api"
+  ],
   "author": "EngiPay Team",
   "license": "MIT"
 }
