--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
     "setup-db": "node scripts/setup-db.js",
     "sync-db": "node -e \"require('./config/database').syncDatabase()\"",
     "reset-db": "node -e \"require('./config/database').syncDatabase(true)\"",
+    "migrate": "node scripts/run-migrations.js",
+    "verify-indexes": "node scripts/verify-indexes.js",
     "test-starknet": "node scripts/test-starknet-connection.js",
     "test-vesu-config": "node scripts/test-vesu-config.js"
   },
