feat: Implement real blockchain payments and complete ChipiPay integration
- Implemented real Starknet blockchain transactions for all payment features
- Removed all mock data from payment endpoints
- Added PaymentService for blockchain transaction execution
- Integrated ENGI token, ETH, STRK, and USDC transfers
- Connected Escrow smart contract for payment requests
- Updated frontend to execute real transactions with wallet signatures
- Added transaction confirmation and Starkscan explorer integration
- Implemented ChipiPay SDK integration with real API calls
- Created comprehensive payment modals with blockchain execution
- Added proper error handling and transaction validation

Backend Changes:
- Created backend/services/paymentService.js for Starknet integration
- Updated backend/routes/payments.js to remove mock data
- Updated backend/routes/chipipay.js with real API integration
- Added transaction execution endpoint

Frontend Changes:
- Updated lib/starknet.ts with PaymentService class
- Created components/payments/PaymentModals.tsx with real transactions
- Updated components/payments/ServicePurchase.tsx for ChipiPay
- Updated contexts/ChipiPayContext.tsx with proper API calls
- Modified app/payments-swaps/page.tsx to use new modals

Documentation:
- Added REAL_BLOCKCHAIN_PAYMENTS_COMPLETE.md
- Added PAYMENT_IMPLEMENTATION_FINAL_SUMMARY.md
- Added CHIPIPAY_PAYMENT_IMPLEMENTATION_COMPLETE.md
- Added QUICK_START_PAYMENTS.md
- Added PAYMENT_REAL_VS_MOCK_STATUS.md

All payment features now execute real blockchain transactions with wallet signatures and on-chain confirmations.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@atomiqlabs/sdk": "^6.0.2",
+    "@chipi-stack/nextjs": "^12.7.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
