--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.4",
+    "recharts": "^3.7.0",
+    "sats-connect": "^4.2.1",
     "sonner": "^1.7.4",
-    "starknet": "^7.6.4",
+    "starknet": "^6.11.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
