Major cleanup and consolidation: streamlined documentation, added new payment features and testing infrastructure
- Consolidated 40+ scattered docs into 4 comprehensive guides (COMPLETE_SYSTEM_DOCUMENTATION, HACKATHON_READY_FEATURES, QA_TESTING_GUIDE, SMART_CONTRACTS_GUIDE)
- Added new payment components: QRScanner, TransactionHistory
- Implemented escrow service and routes (payments-v2, escrow endpoints)
- Added tier 1 & 2 payment testing infrastructure
- Updated payment components: BtcSwap, EscrowPayments, PaymentModals, SendPayment, SwapHistory
- Enhanced backend routes: payments, swaps-atomiq, transactions
- Added contract ABIs to backend
- Updated dependencies and environment configuration
- Removed obsolete documentation and spec files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -50,10 +50,14 @@ TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=+1234567890
 
-# Smart Contract Addresses (After deployment)
-ESCROW_CONTRACT_ADDRESS=0x...
-ENGI_TOKEN_CONTRACT_ADDRESS=0x...
-REWARD_DISTRIBUTOR_CONTRACT_ADDRESS=0x...
+# Smart Contract Addresses (Update after deployment)
+ESCROW_CONTRACT_ADDRESS=0x0
+ENGI_TOKEN_ADDRESS=0x0
+REWARD_DISTRIBUTOR_ADDRESS=0x0
+
+# StarkNet Account (for backend transactions)
+STARKNET_ACCOUNT_ADDRESS=0x0
+STARKNET_PRIVATE_KEY=0x0
 
 # Security
 RATE_LIMIT_WINDOW_MS=900000
