--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
     "ethers": "^6.15.0",
     "geist": "^1.3.1",
     "get-starknet": "^4.0.0",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^14.2.15",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.2.0",
